--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,5 @@ kramdown:
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
+title: Jean Habib | Software Quality Engineer
+description: Presenting Jean Habib's Professional Profile
