--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ baseurl: '' # the subpath of your site, e.g. /blog
 url: 'https://jeanhabib.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: habibbr
 github_username: jeanhabib
+linkedin_username: jeanhabib
+show_excerpts: true
 
 # Build settings
 markdown: kramdown
